# VioScope

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py  test_config.py
tests/test_agents/: test_scout.py  test_skeptic.py  test_spark.py  test_synth.py
tests/test_kb/: test_local.py  test_session_store.py
tests/test_repl/: test_commands.py  test_context.py  test_dispatcher.py  test_loop.py  test_nl_router.py
tests/test_tools/: test_citation_verify.py  test_openalex.py  test_semantic_scholar.py
viosclaw/: config.py  main.py
viosclaw/core/: agent.py  banner.py  session.py  tools.py
vioscope/: cli.py  config.py
vioscope/agents/: __init__.py  _models.py  scout.py  skeptic.py  spark.py  synth.py
vioscope/configs/: __init__.py  loader.py
vioscope/configs/agents/: __init__.py  scout.yaml  skeptic.yaml  spark.yaml  synth.yaml
vioscope/core/: __init__.py  circuit_breaker.py  safe_path.py
vioscope/kb/: __init__.py  local.py  session_store.py
vioscope/repl/: __init__.py  agents.py  context.py  dispatcher.py  loop.py  nl_router.py
vioscope/repl/commands/: __init__.py  base.py  help.py  kb.py  pipeline.py  scout.py  scribe.py  session.py  skeptic.py  spark.py  steward.py  synth.py
vioscope/schemas/: __init__.py  pipeline.py  research.py  writing.py
vioscope/tools/: __init__.py  citation_verify.py  openalex.py  semantic_scholar.py
