[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viosclaw"
version = "0.1.0"
description = "An implementation of claw for VIOS group."
authors = [
    { name = "Yuyang Xue", email = "yuyang.xue@ed.ac.uk"}
]
requires-python = ">=3.11"
dependencies = [
    "rich>=14.0.0",
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pyfiglet>=1.0.0",
    "ascii_magic>=2.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "pre-commit"
]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203", "E501"]


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=viosclaw --cov-report=term-missing"

[project.scripts]
viosclaw = "viosclaw.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["viosclaw*"]