[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vioscope"
version = "0.1.0"
description = "Research augmentation CLI for the VioScope project."
authors = [
    { name = "Yuyang Xue", email = "yuyang.xue@ed.ac.uk"}
]
requires-python = ">=3.11"
dependencies = [
    "agno>=2.5.16",
    "anthropic>=0.52.0",
    "lancedb>=0.30.2",
    "openai>=1.76.0",
    "typer>=0.12.0",
    "rich>=15.0.0",
    "prompt_toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black==24.3.0",
    "ruff==0.4.0",
    "mypy==1.20.0",
    "pre-commit",
]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=vioscope --cov-report=term-missing"

[project.scripts]
vioscope = "vioscope.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["vioscope*"]

[tool.setuptools.package-data]
"vioscope.configs.agents" = ["*.yaml"]
